--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "ad9f7833-6a7d-424e-89ef-1fe866f266bc"
   },
   "newProjectRoot": "projects",
   "projects": {
