--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/app/Fondos",
+                "output": "assets/Fondos"
               }
             ],
             "styles": [
